# axidence

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: black.yml  flake8.yml  pypi_install.yml  pytest.yml
axidence/: __init__.py  context.py  dtypes.py  plugin.py  samplers.py  utils.py
axidence/plugins/: __init__.py  cut_plugin.py  down_chunking_plugin.py  exhaust_plugin.py  loop_plugin.py  merge_only_plugin.py  overlap_window_plugin.py
axidence/plugins/cuts/: __init__.py  cut_event_building.py  cut_isolated_s1.py  cut_isolated_s2.py  cut_pairing_exists.py  cuts_event_building.py
axidence/plugins/isolated/: __init__.py  isolated_s1.py  isolated_s2.py
axidence/plugins/meta/: __init__.py  run_meta.py
axidence/plugins/pairing/: __init__.py  events_paired.py  paired_peaks.py  peaks_paired.py
axidence/plugins/salting/: __init__.py  event_building.py  event_combine.py  event_fields.py  events_salting.py  peak_correlation.py  peaks_salted.py  salting_events.py  salting_peaks.py  triggerable_peaks_salted.py
docs/: make_docs.sh
docs/source/: build_release_notes.py  conf.py  index.rst  installation.rst
extra_requirements/: requirements-tests.txt
tests/: conftest.py  test_context.py  test_deps_tree.py  test_exhaust_plugin.py  test_pairing.py  test_placeholder.py  test_salting.py
