[tool]
[tool.poetry]
name = "axidence"
version = "0.3.3"
description = "strax-based data-driven accidental coincidence background simulation and peak-level salting"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  "Dacheng Xu, <dx2227@columbia.edu>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
repository = "https://github.com/XENONnT/axidence"
documentation = "https://readthedocs.org/projects/axidence/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
strax = ">=1.6.3,<=1.6.5"
straxen = ">=2.2.6,<=2.2.7"
GOFevaluation = ">=0.1.5"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"
